@@ -73,7 +73,7 @@ $version = "@VERSION@";
               "mandrake-10.0", "mandrake-10.1",
               "debian-2.2", "debian-3.0", "debian-sarge",              
               "suse-7.0", "suse-9.0",
-              "turbolinux-7.0", "fedora-1",
+              "turbolinux-7.0", "fedora-1", "fedora-2",
               "pld-1.0", "pld-1.1", "pld-1.99",
               "conectiva-9", "conectiva-10",
               "slackware-9.1.0", "slackware-10.0.0",
