@@ -277,6 +277,7 @@ sub gst_network_get_broadcast_ping_cmd
        "conectiva-9"  => "debian-2.2",
        "conectiva-10" => "debian-2.2",
        "fedora-1"     => "redhat-6.2",
+       "fedora-2"     => "redhat-6.2",
        "slackware-9.1.0" => "redhat-6.2",
        "slackware-10.0.0" => "redhat-6.2",
        "gentoo"       => "debian-2.2",
@@ -1436,6 +1437,7 @@ sub gst_network_get_file
     "pld-1.1"      => \&gst_network_pld10_get_file,
     "pld-1.99"     => \&gst_network_pld10_get_file,
     "fedora-1"     => \&gst_network_rh72_get_file,
+    "fedora-2"     => \&gst_network_rh72_get_file,
     "slackware-9.1.0" => \&gst_network_deb22_get_file,
     "slackware-10.0.0" => \&gst_network_deb22_get_file,
     "gentoo"       => \&gst_network_deb22_get_file,
@@ -3381,6 +3383,7 @@ sub gst_network_ensure_loopback_interface
     "pld-1.1"      => "lo",
     "pld-1.99"     => "lo",
     "fedora-1"     => "",
+    "fedora-2"     => "",
     "slackware-9.1.0" => "",
     "slackware-10.0.0" => "",
     "gentoo"       => "",
@@ -3499,6 +3502,7 @@ sub gst_network_get_parse_table
     "pld-1.1"      => "pld-1.0",
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
+    "fedora-2"     => "redhat-7.2",
     "slackware-9.1.0" => "slackware-9.1.0",
     "slackware-10.0.0" => "slackware-9.1.0",
     "gentoo"       => "gentoo",
@@ -3905,6 +3909,7 @@ sub gst_network_get_interface_parse_table
     "pld-1.1"      => "pld-1.0",
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
+    "fedora-2"     => "redhat-7.2",
     "slackware-9.1.0" => "slackware-9.1.0",
     "slackware-10.0.0" => "slackware-9.1.0",
     "gentoo"       => "gentoo",
@@ -4581,6 +4586,7 @@ sub gst_network_get_replace_table
     "pld-1.1"      => "pld-1.0",
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
+    "fedora-2"     => "redhat-7.2",
     "slackware-9.1.0" => "slackware-9.1.0",
     "slackware-10.0.0" => "slackware-9.1.0",
     "gentoo"       => "gentoo",
@@ -4974,6 +4980,7 @@ sub gst_network_get_interface_replace_table
     "pld-1.1"      => "pld-1.0",
     "pld-1.99"     => "pld-1.0",
     "fedora-1"     => "redhat-7.2",
+    "fedora-2"     => "redhat-7.2",
     "slackware-9.1.0" => "slackware-9.1.0",
     "slackware-10.0.0" => "slackware-9.1.0",
     "gentoo"       => "gentoo",
