@@ -51,7 +51,7 @@ $version = "@VERSION@";
               
               "debian-2.2", "debian-3.0", "debian-sarge",
 
-              "suse-7.0", "turbolinux-7.0", "fedora-1",
+              "suse-7.0", "turbolinux-7.0", "fedora-1", "fedora-2",
               "pld-1.0", "pld-1.1", "pld-1.99",
               "slackware-9.1.0", "slackware-10.0.0",
               "gentoo", "freebsd-5", "suse-9.0");
