@@ -1,5 +1,11 @@
 2004-07-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
+	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,
+	  services-conf.in, time-conf.in, users-conf.in: added support for
+	  Fedora Core 2
+
+2004-07-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
 	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in, 
 	  services-conf.in, time-conf.in, users-conf.in: added support for
 	  Slackware 10, thanks to Evandro for testing it
